--- a/FF8CardApp/ClientApp/src/app/home/home.component.html
+++ b/FF8CardApp/ClientApp/src/app/home/home.component.html
@@ -1,15 +1,19 @@
 <div style="text-align: center; ">
-  <table *ngIf="alphaCards" style="display: inline-block; float: left; margin: 30px ">
-    <tbody>
-      <tr *ngFor="let card of alphaCards; let i = index">
-        <td><img src="{{ card.imageURL }}" id="{{i}}" (click)="onClickCard($event)" /></td>
-        <td>{{ card.name }}</td>
-        <td>{{ card.e }}  {{ card.n }}  {{ card.w }}  {{ card.s }}</td>
-      </tr>
-    </tbody>
-  </table>
-  <button type="button" (click)="onReset()">Reset</button>
+  <div style="display: inline-block; float: left; margin: 30px;">
+
+    <table *ngIf="alphaCards">
+      <tbody>
+        <tr *ngFor="let card of alphaCards; let i = index">
+          <td><img src="{{ card.imageURL }}" id="{{i}}" (click)="onClickCard($event)" /></td>
+          <td>{{ card.name }}</td>
+          <td>{{ card.e }}  {{ card.n }}  {{ card.w }}  {{ card.s }}</td>
+        </tr>
+      </tbody>
+    </table>
+    <button style="margin: 30px;" mat-raised-button (click)="setAlphaCards()">Set cards</button>
+  </div>
   <div style="display: inline-block;">
+    <button style="margin: 30px;" mat-raised-button (click)="goFirst()">AI First</button>
     <table style="height: 360px; margin: 30px">
       <tbody>
         <tr *ngFor="let yItem of [].constructor(3); let y = index">
@@ -21,14 +25,18 @@
     </table>
     <h2>Score: {{alphaScore}} - {{betaScore}}</h2>
     <h2 *ngIf="isGameOver()">{{whoWon()}}</h2>
+    <button style="margin: 30px;" mat-raised-button (click)="onReset()">Reset</button>
   </div>
-  <table *ngIf="betaCards" style="float: right; display: inline-block; margin: 30px;">
-    <tbody>
-      <tr *ngFor="let card of betaCards">
-        <td>{{ card.element }}</td>
-        <td>{{ card.e }}  {{ card.n }}  {{ card.w }}  {{ card.s }}</td>
-        <td><img src="{{ card.imageURL }}" class="inverted" /></td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+  <div style="display: inline-block; float: right; margin: 30px;">
+      <table *ngIf="betaCards" >
+        <tbody>
+          <tr *ngFor="let card of betaCards">
+            <td>{{ card.name }}</td>
+            <td>{{ card.e }}  {{ card.n }}  {{ card.w }}  {{ card.s }}</td>
+            <td><img src="{{ card.imageURL }}" class="inverted" /></td>
+          </tr>
+        </tbody>
+      </table>
+      <button style="margin: 30px;" mat-raised-button (click)="setBetaCards()">Set cards</button>
+    </div>
+  </div>
